shaku_derive/tests/ui/no_interface_key.stderr
error: Unable to find interface. Please add a '#[shaku(interface = <your trait>)]'
 --> $DIR/no_interface_key.rs:8:10
  |
8 | #[derive(Component)]
  |          ^^^^^^^^^

error: Unable to find interface. Please add a '#[shaku(interface = <your trait>)]'
  --> $DIR/no_interface_key.rs:13:10
   |
13 | #[derive(Provider)]
   |          ^^^^^^^^
